--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -9,6 +9,10 @@ body {
   background: #F8F8F8;
 }
 
+h2, h3, h3 a{
+  font-family:arial;
+}
+
 a {
   text-decoration: none;
 }
@@ -77,7 +81,6 @@ a:hover {
 
 #sidebar ul {
   list-style-type: none;
-
   margin: 20px 0px;
 }
 
