--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -34,7 +34,7 @@ a:hover {
   */
   position:relative;
   margin-top:40px;
-  margin-left:auto;
+  margin-left:325px;
   margin-right:auto;
   width: 700px;
 }
