Updating sidebar on website

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -67,12 +67,12 @@ a:hover {
 
 #sidebar {
   position: fixed;
-
   top: 40px;
   left: 60px;
   width: 200px;
   height: 90%;
   border-right: 1px solid #ccc;
+  background: #F8F8F8;
 }
 
 #sidebar h2 a{
