--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -67,21 +67,24 @@ a:hover {
 
 #sidebar {
   position: fixed;
-  top: 40px;
-  left: 60px;
+  top: 0;
+  left: 0;
+  padding-top: 40px;
+  padding-left: 60px;
   width: 200px;
-  height: 90%;
+  height: 100%;
   border-right: 1px solid #ccc;
   background: #F8F8F8;
 }
 
-#sidebar h2 a{
+#logo a{
   color: #333;
   letter-spacing: 1px;
   line-height: 20px;
   font-family: 'Damion';
   text-transform: none;
   font-weight:normal;
+  border-bottom: 4px solid #577664;
 }
 
 #sidebar ul {
@@ -105,6 +108,16 @@ a:hover {
 
 #sidebar span{
   color:#333;
+}
+
+#edge{
+  position: absolute;
+  top: 0px;
+  left: 261px;
+  width: 40px;
+  height: 100%;
+  background: -webkit-linear-gradient(right, rgba(248, 248, 248,0), rgba(248, 248, 248, 1));
+  background: -moz-linear-gradient(right, rgba(248, 248, 248, 0), rgba(248, 248, 248, 1));
 }
 
 .framed_pic{
