--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -8,6 +8,44 @@
   margin-bottom: 0px;
 }
 
+.thumbnail {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.thumbnail a{
+  position: relative;
+  display: block;
+  height: 160px;
+  width: 160px;
+}
+
+.thumbnail .overlay{
+  position: absolute;
+  display: table;
+  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .75);
+  opacity: 0;
+  transition: opacity .2s linear;
+  -webkit-transition: opacity .2s linear;
+  -moz-transition: opacity .2s linear;
+}
+
+.thumbnail .overlay span{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  color: white;
+}
+
+.thumbnail:hover .overlay{
+  opacity: 1;
+}
+
 .blogpost{
   margin: 0px 0px 20px 0px;
 }
