Update projects and text on about page

--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -11,13 +11,16 @@
 .thumbnail {
   display: inline-block;
   margin-right: 10px;
+  padding: 10px 10px 20px 10px;
+  background: white;
+  border: 1px solid #EEE;
 }
 
 .thumbnail a{
   position: relative;
   display: block;
-  height: 160px;
-  width: 160px;
+  height: 150px;
+  width: 150px;
 }
 
 .thumbnail .overlay{
@@ -54,6 +57,14 @@
   width: 75px;
 }
 
+.blogtitle {
+  width: 400px;
+}
+
+.blogdate {
+  float: left
+}
+
 .blogdate,.blogtitle{
   display: inline-block;
 }
@@ -68,7 +79,7 @@
   color: #CF6A6F;
 }
 
-.blogpost:hover .blogdate span{
+.blogtitle:hover + .blogdate span{
   background: red;
 }
 
