--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -10,6 +10,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-weight: normal;
   margin-bottom: 10px;
 }
 
