--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -196,7 +196,13 @@ ul li {
   width: 300px;
 }
 
-.infolabel{
+.infolabel {
   display: inline-block;
   width: 100px;
+  float: left;
+}
+
+.infocontent {
+  display: inline-block;
+  width: 200px;
 }
