--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -201,3 +201,44 @@ ul li {
   display: inline-block;
   width: 100px;
 }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
+  /* Styles */
+
+  #main {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #sidebar {
+    position: static;
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  #sidebar ul { 
+    margin: 0;
+  }
+
+  #sidebar ul li:first-child {
+    display: block;
+    margin-bottom: 0;
+  }
+
+  #sidebar ul li {
+    display: inline-block;
+  }
+
+  #sidebar ul li:hover {
+    border-left: 5px solid #F8F8F8 !important;
+  }
+
+  #edge, #social, #projects,
+  #playground, #presentations {
+    display: none !important;
+  }
+}
