--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -88,9 +88,7 @@
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
+@media (max-width : 480px) {
   /* Styles */
   #main .section:nth-child(2) {
     display: none;
