--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -203,9 +203,7 @@ ul li {
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
+@media (max-width : 480px) {
   /* Styles */
 
   #main {
