--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -54,19 +54,17 @@ ul li {
 }
 
 #main {
-  /*
-   * position: absolute;
-   * top: 40px;
-   * left: 300px;
-  */
   position: relative;
   margin-top: 40px;
-  margin-right: auto;
-  margin-left: 325px;
-  width: 750px;
+  margin-left: 20%;
+  width: 80%;
 }
 
-
+.container {
+  width: 700px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 #sidebar {
   position: fixed;
@@ -74,7 +72,7 @@ ul li {
   left: 0;
   padding-top: 40px;
   padding-left: 60px;
-  width: 200px;
+  width: 20%;
   height: 100%;
   border-right: 1px solid #ccc;
   background: #F8F8F8;
@@ -82,7 +80,8 @@ ul li {
 
 #sidebar ul {
   list-style-type: none;
-  margin: 100px 40px 0px 0px;
+  margin: 0 40px 0px 0px;
+  width: 150px;
 }
 
 #sidebar ul li:first-child{
@@ -150,6 +149,7 @@ ul li {
   border-top: 1px solid #CCCCCC;
   border-bottom: 1px solid #CCCCCC;
   text-align: center;
+  width: 150px;
 }
 
 #sidebar #social a img{
@@ -158,16 +158,6 @@ ul li {
 
 #sidebar #social a img:hover{
   opacity: 1.0;
-}
-
-#edge{
-  position: absolute;
-  top: 0px;
-  left: 261px;
-  width: 40px;
-  height: 100%;
-  background: -webkit-linear-gradient(right, rgba(248, 248, 248,0), rgba(248, 248, 248, 1));
-  background: -moz-linear-gradient(right, rgba(248, 248, 248, 0), rgba(248, 248, 248, 1));
 }
 
 .framed_pic{
@@ -202,8 +192,8 @@ ul li {
   width: 100px;
 }
 
-/* Smartphones (portrait and landscape) ----------- */
-@media (max-width : 480px) {
+/* Smaller screens ----------- */
+@media (max-width : 1024px){
   /* Styles */
 
   #main {
@@ -219,6 +209,7 @@ ul li {
   }
 
   #sidebar ul { 
+    width: auto;
     margin: 0;
   }
 
@@ -238,5 +229,15 @@ ul li {
   #edge, #social, #projects,
   #playground, #presentations {
     display: none !important;
+  }
+}
+
+@media (max-width : 800px){
+  body {
+    font-size: 1.5em;
+  }
+
+  .container {
+    width: 100%;
   }
 }
