--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -45,7 +45,7 @@ ul, ol {
 }
 
 li {
-  font-size: 15px;
+  font-size: 1em;
   line-height: 20px;
 }
 
@@ -53,26 +53,27 @@ ul li {
   list-style-type: square;
 }
 
-#main {
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0;
   position: relative;
-  margin-top: 40px;
-  margin-left: 20%;
-  width: 80%;
 }
 
-.container {
+#main {
+  margin-top: 40px;
+  margin-left: 240px;
   width: 700px;
-  margin-right: auto;
-  margin-left: auto;
+}
+
+.sidebar_container {
+  min-height: 1px;
+  width: 240px;
 }
 
 #sidebar {
   position: fixed;
-  top: 0;
-  left: 0;
   padding-top: 40px;
-  padding-left: 60px;
-  width: 20%;
   height: 100%;
   border-right: 1px solid #ccc;
   background: #F8F8F8;
@@ -107,7 +108,6 @@ ul li {
   color:#333333;
   padding-left: 20px;
   display: block;
-  letter-spacing: 1px;
 }
 
 #sidebar a:hover{
@@ -193,12 +193,17 @@ ul li {
 }
 
 /* Smaller screens ----------- */
-@media (max-width : 1024px){
+@media (max-width : 1048px){
   /* Styles */
 
   #main {
     width: 80%;
     margin: 0 auto;
+  }
+
+  .container,
+  .sidebar_container {
+    width: auto;
   }
 
   #sidebar {
@@ -233,10 +238,6 @@ ul li {
 }
 
 @media (max-width : 800px){
-  body {
-    font-size: 1.5em;
-  }
-
   .container {
     width: 100%;
   }
